kustomize/frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sl-trailing-slash
spec:
  redirectRegex:
    regex: ^https?://([^/]+)(/sl)$
    replacement: https://${1}${2}/
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-target
spec:
  replacePathRegex:
    regex: ^/sl(/|$)(.*)
    replacement: /$2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izvoli-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: izvoli-eu-sl-trailing-slash@kubernetescrd,izvoli-eu-rewrite-target@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - izvoli.eu
      secretName: izvoli-frontend-tls
  rules:
    - host: izvoli.eu
      http:
        paths:
          - path: /sl(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: izvoli-frontend
                port:
                  number: 80
